# module36_HW

./: CMakeLists.txt
include/: myWidget.cpp  myWidget.h
src/: main.cpp
